--- a/store/src/app/components/menu-bar/menu-bar.component.html
+++ b/store/src/app/components/menu-bar/menu-bar.component.html
@@ -2,7 +2,7 @@
   <div class="menu-bar_logo">
     <img
       src="/assets/ps-logo.png"
-      alt=""
+      alt="playStation-logo"
       srcset=""
       width="140px"
       height="32px"
@@ -10,9 +10,9 @@
   </div>
   <div class="menu-bar_item">
     <ul>
-      <li class="a">Instagram</li>
-      <li class="a">Linkedin</li>
-      <li class="a">GitHub</li>
+      <li><a href="https://www.instagram.com/jonathas_rosa85/" target="_blank">Instagram</a></li>
+      <li><a href="https://www.linkedin.com/in/jonathasrosa85/" target="_blank">Linkedin</a></li>
+      <li><a href="https://github.com/JONATHASROSA" target="_blank">GitHub</a></li>
     </ul>
   </div>
 </div>
