--- a/store/src/app/components/menu-bar/menu-bar.component.css
+++ b/store/src/app/components/menu-bar/menu-bar.component.css
@@ -20,3 +20,23 @@
   margin: auto;
   align-items: center;
 }
+
+.menu-bar_item > ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.menu-bar_item > ul > li {
+  padding: 5px;
+  margin-right: 15px;
+}
+
+.menu-bar_item > ul > li > a {
+  text-decoration: none;
+  color: rgb(7,7,7);
+  font-family: 'Segoe UI';
+}
+.menu-bar_item > ul > li > a:hover {
+  color: blue;
+  font-weight: 600;
+}
