--- a/store/src/app/components/menu-bar/menu-bar.component.css
+++ b/store/src/app/components/menu-bar/menu-bar.component.css
@@ -1,6 +1,6 @@
 .menu-bar_container {
   display: flex;
-  flex-derection: row;
+  flex-direction: row;
   position: fixed;
   z-index: 999;
   background-color: #ffffff;
