--- a/store/src/app/components/menu-bar/menu-bar.component.html
+++ b/store/src/app/components/menu-bar/menu-bar.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="menu-bar_item">
     <ul>
-      <li><a href="https://www.instagram.com/jonathas_rosa85/" target="_blank">Instagram</a></li>
+      <li><a href="https://www.instagram.com/jonathasrosa.jsx/" target="_blank">Instagram</a></li>
       <li><a href="https://www.linkedin.com/in/jonathasrosa85/" target="_blank">Linkedin</a></li>
       <li><a href="https://github.com/JONATHASROSA" target="_blank">GitHub</a></li>
     </ul>
